--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ homepage = "https://github.com/snejus/beets-bandcamp"
 repository = "https://github.com/snejus/beets-bandcamp"
 
 packages = [{ include = "beetsplug" }]
-include = ["README.rst"]
+include = ["LICENSE", "README.rst"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
