--- a/setup.cfg
+++ b/setup.cfg
@@ -8,9 +8,13 @@ addopts =
     --cov-report=html:reports
     --cov-branch
 
+markers =
+    need_connection: end-to-end tests that require internet connection
+    parsing: parsing tests
+
 testpaths =
-     beetsplug
-     tests
+    beetsplug
+    tests
 
 [coverage:run]
 branch = true
@@ -49,4 +53,5 @@ namespace_packages =        true
 show_error_codes =          true
 allow_any_generics =        true
 allow_subclassing_any =     true
-ignore_missing_imports =    false
+allow_untyped_decorators =  true
+ignore_missing_imports =    true
