Correctly handle track urls when looking for album

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ addopts =
 markers =
     need_connection: end-to-end tests that require internet connection
     parsing: parsing tests
+    dev
 
 testpaths =
     beetsplug
