--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,15 @@
+[tox:tox]
+envlist = py36,py37,py38,py39
+isolated_build = true
+
+[testenv]
+deps =
+    pytest
+    pytest-cov
+    dataclasses
+commands =
+    pytest
+
 [tool:pytest]
 addopts =
     # -l
@@ -11,7 +23,6 @@ addopts =
 markers =
     need_connection: end-to-end tests that require internet connection
     parsing: parsing tests
-    dev
 
 testpaths =
     beetsplug
