Fix albumartist, add comments field

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ deps =
     pytest-cov
     dataclasses
 commands =
-    pytest
+    pytest -m parsing
 
 [tool:pytest]
 addopts =
@@ -29,10 +29,7 @@ testpaths =
     tests
 
 [coverage:run]
-branch = true
 dynamic_context = test_function
-source =
-    beetsplug
 
 [coverage:report]
 precision = 2
