Update the country parser to take full stops into account

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,21 @@
 [tox:tox]
-envlist = py36,py37,py38,py39
+envlist = py3{6,7,8,9}-beets1{4,5}
 isolated_build = true
 
 [testenv]
 deps =
+    beets14: beets<1.5
     pytest
     pytest-cov
     dataclasses
 commands =
     pytest -m parsing
 
+[testenv:py3{6,7,8,9}-beets15]
+install_command = pip install --pre -e "git+https://github.com/beetbox/beets#egg=beets" {packages}
+
 [tool:pytest]
 addopts =
-    # -l
     -vv
     --strict-config
     --code-highlight=yes
@@ -45,10 +48,7 @@ exclude_lines =
 show_contexts = true
 
 [flake8]
-ignore =
-    E203
-    E402
-    W503
+ignore = E203 E402 W503
 max-line-length = 90
 
 [mypy]
