Bandcamp html updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "beetcamp"
-version = "0.7.1"
+version = "0.7.2-alpha.0"
 description = "Bandcamp autotagger source for beets (http://beets.io)."
 authors = ["Šarūnas Nejus <snejus@pm.me>"]
 readme = "README.md"
@@ -12,7 +12,7 @@ packages = [{ include = "beetsplug" }]
 include = ["LICENSE", "README.md"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = ">=3.6,<3.10"
 
 beets = ">=1.4.6"
 requests = "*"
@@ -20,6 +20,7 @@ cached-property = "^1.5.2"
 pycountry = "^20.7.3"
 
 [tool.poetry.dev-dependencies]
+beets = { git = "https://github.com/beetbox/beets" }
 dataclasses = "*"
 tox = "^3.21.1"
 flake8 = ">=3.8.4"
