Added pylint and updated deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,3 +63,15 @@ allow_any_generics =        true
 allow_subclassing_any =     true
 allow_untyped_decorators =  true
 ignore_missing_imports =    true
+
+[pylint.MESSAGES]
+disable = missing-function-docstring,
+     missing-class-docstring,
+     too-few-public-methods,
+     too-many-public-methods,
+     too-many-arguments,
+     protected-access,
+     invalid-name
+
+[pylint.REPORTS]
+output-format = colorized
