--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dataclasses = "*"
 tox = "^3.21.1"
 flake8 = ">=3.8.4"
 mypy = ">=0.790"
+pylint = "^2.7.4"
 pytest = ">=6.2"
 pytest-cov = ">=2.10.1"
 
