--- a/setup.cfg
+++ b/setup.cfg
@@ -67,10 +67,11 @@ ignore_missing_imports =    true
 [pylint.MESSAGES]
 disable = missing-function-docstring,
      missing-class-docstring,
-     too-few-public-methods,
      too-many-public-methods,
+     too-few-public-methods,
      too-many-arguments,
      protected-access,
+     line-too-long,
      invalid-name
 
 [pylint.REPORTS]
