--- a/setup.cfg
+++ b/setup.cfg
@@ -52,17 +52,19 @@ ignore = E203 E402 W503
 max-line-length = 90
 
 [mypy]
-# strict =                    true
+strict =                    true
 warn_unreachable =          true
 warn_unused_ignores =       true
 warn_unused_configs =       true
 warn_redundant_casts =      true
 namespace_packages =        true
 show_error_codes =          true
-allow_any_generics =        true
-allow_subclassing_any =     true
+
 allow_untyped_decorators =  true
+allow_subclassing_any =     true
+allow_any_generics =        true
 ignore_missing_imports =    true
+warn_return_any =           false
 
 [pylint.MESSAGES]
 disable = missing-function-docstring,
